@@ -1,25 +1,27 @@
 use strict;
 use warnings;
-use File::Spec::Functions qw(catfile);
-use Test::More tests => 12;
+
+use Test::More;
+use Path::Tiny;
 
 use_ok('Log::Dispatch');
 use_ok('Log::Dispatch::File::Stamped');
 
+my $tempdir = Path::Tiny->tempdir;
 my ($hour,$mday,$mon,$year) = (localtime)[2..5];
-my @files;
 
 my %params = (
     name      => 'file',
     min_level => 'debug',
-    filename  => catfile('t', 'logfile.txt'),
+    filename  => $tempdir->child('logfile.txt')->stringify,
 );
+
 my @tests = (
-  { expected => sprintf("logfile-%04d%02d%02d.txt", $year+1900, $mon+1, $mday),
+  { expected => $tempdir->child(sprintf("logfile-%04d%02d%02d.txt", $year+1900, $mon+1, $mday)),
     params   => \%params,
     message  => 'foo bar',
   },
-  { expected => sprintf("logfile-%02d%02d.txt", $mday, $hour),
+  { expected => $tempdir->child(sprintf("logfile-%02d%02d.txt", $mday, $hour)),
     params   => { %params, stamp_fmt => '%d%H' },
     message  => 'blah blah',
   },
@@ -27,20 +29,14 @@ my @tests = (
 for my $t (@tests) {
     my $dispatcher = Log::Dispatch->new;
     ok($dispatcher);
-    my $file = catfile('t', $t->{expected});
-    push @files, $file;
+    my $file = $t->{expected};
     my $stamped = Log::Dispatch::File::Stamped->new(%{$t->{params}});
     ok($stamped);
     $dispatcher->add($stamped);
     $dispatcher->log( level   => 'info', message => $t->{message} );
-    ok(-e $file);
-    open my $fh, "<$file";
-    ok($fh);
-    local $/ = undef;
-    my $line = <$fh>;
-    close $fh;
-    ok($line, $t->{message});
+
+    ok(-e $file, "$file exists");
+    is($file->slurp, $t->{message}, 'log content is correct');
 }
-END {
-    unlink @files if @files;
-};
+
+done_testing;
