@@ -1,27 +1,27 @@
 use strict;
 use warnings;
-use File::Spec::Functions qw(catfile);
+
 use Test::More;
+use Path::Tiny;
+
+my $tempdir = Path::Tiny->tempdir;
+my ($hour,$mday,$mon,$year) = (localtime)[2..5];
 
 my %params = (
     name      => 'file',
     min_level => 'debug',
-    filename  => catfile('t', 'logfile.txt'),
+    filename  => $tempdir->child('logfile.txt')->stringify,
 );
-my ($hour,$mday,$mon,$year) = (localtime)[2..5];
 my @tests = (
-  { expected => sprintf("logfile-%04d%02d%02d.txt", $year+1900, $mon+1, $mday),
+  { expected => $tempdir->child(sprintf("logfile-%04d%02d%02d.txt", $year+1900, $mon+1, $mday)),
     params   => {%params, 'binmode' => ':encoding(UTF-8)'},
     message  => "foo bar\x{20AC}",
     expected_message => "foo bar\xe2\x82\xac",
   },
 );
-plan tests => 2 + 5 * @tests;
 
 use_ok('Log::Dispatch');
 use_ok('Log::Dispatch::File::Stamped');
-
-my @files;
 
 SKIP:
 {
@@ -31,21 +31,15 @@ SKIP:
     for my $t (@tests) {
         my $dispatcher = Log::Dispatch->new;
         ok($dispatcher);
-        my $file = catfile('t', $t->{expected});
-        push @files, $file;
+        my $file = $t->{expected};
         my $stamped = Log::Dispatch::File::Stamped->new(%{$t->{params}});
         ok($stamped);
         $dispatcher->add($stamped);
         $dispatcher->log( level   => 'info', message => $t->{message} );
-        ok(-e $file);
-        open my $fh, "<$file";
-        ok($fh);
-        local $/ = undef;
-        my $line = <$fh>;
-        close $fh;
-        is($line, $t->{expected_message}, 'output');
+
+        ok(-e $file, "$file exists");
+        is($file->slurp, $t->{expected_message}, 'file contains correct (encoded) bytes');
     }
 }
-END {
-    unlink @files if @files;
-};
+
+done_testing;
